solve horizontal scroll bug

--- a/src/container/Header/Header.scss
+++ b/src/container/Header/Header.scss
@@ -8,11 +8,9 @@
 
   @include flexDirection(flex, row);
 
-  width: 100vw;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-
 
   div:nth-of-type(1) {
     margin: 4rem 0 4rem 4rem;
